# coral-hackethon

./: .env.example  .gitignore  .gitmessage.txt  CONTRIBUTING.md  README.md  pyproject.toml
docs/: architecture.md  bundled-sources.md  cli-reference.md  community-sources.md  getting-started.md  installation.md  observe-with-opentelemetry.md  quickstart.md  release-process.md  roadmap.md  rules.md  security.md  source-spec-reference.md  use-coral-over-mcp.md  write-a-custom-source.md
frontend/: IMPLEMENTATION_PLAN.md  README.md  README_IMPLEMENTATION.md  components.json  package-lock.json  package.json  playwright.config.ts
incident_captain/: __init__.py  batch.py  briefing.py  bundling.py  cli.py  config.py  coral.py  dashboard.py  doctor.py  evidence_verify.py  exporters.py  external_kit.py  finalize.py  handoff.py  impact.py  import_evidence.py  judge_pack.py  live_playbook.py  live_unblock.py  metrics.py  models.py  next_actions.py  orchestration.py  plan_audit.py  progress.py  quality.py  readiness.py  release.py  reporting.py  scorecard.py  webapi.py
plan/: end-to-end-delivery-plan.md  execution-board.md  integration-next-steps.md
tests/: test_batch.py  test_briefing.py  test_bundling.py  test_close_live_loop.py  test_config.py  test_coral.py  test_coral_errors.py  test_dashboard.py  test_demo_run.py  test_doctor.py  test_evidence_verify.py  test_exporters.py  test_external_kit.py  test_finalize.py  test_handoff.py  test_impact.py  test_import_evidence.py  test_judge_pack.py  test_live_playbook.py  test_live_unblock.py  test_metrics.py  test_next_actions.py  (+9 more)
(+38 files in other folders)
