[project]
name = "incident-captain"
version = "0.1.0"
description = "Track 1 Enterprise Agent scaffold built on Coral."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
incident-captain = "incident_captain.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

